--- a/templates/index.html
+++ b/templates/index.html
@@ -633,6 +633,8 @@
                         <strong>Your feedback will be incorporated into the next round.</strong>
                         Workers and the synthesizer will directly address your guidance.
                     </p>
+
+                    <div class="round-followup-questions" id="round-followup-questions" style="display: none;"></div>
                     
                     <div class="round-worker-outputs" id="round-worker-outputs">
                         <!-- Worker output cards with feedback will be added dynamically -->
@@ -777,5 +779,4 @@
     <script src="/static/js/personas.js"></script>
 </body>
 </html>
-
 
